--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "homepage": "https://gitlab.com/prostethicsync/prosthetic-api#readme",
   "dependencies": {
     "argon2": "^0.41.1",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "pg": "^8.13.1",
     "pg-promise": "^11.10.2"
   },
   "devDependencies": {
