--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node app.js",
     "test": "mocha --config=.mocharc.json",
-    "allure": "allure generate --clean && allure open"
+    "allure": "allure generate --clean && allure open",
+    "clear-db": "node ./config/clearDb.js"
   },
   "repository": {
     "type": "git",
